Fixed code block overflow in mobile fiew.

--- a/app/studies/summaries/[summaryName]/styles.module.css
+++ b/app/studies/summaries/[summaryName]/styles.module.css
@@ -58,6 +58,9 @@
 .markdown pre {
   font-family: monospace;
   width: fit-content;
+  max-width: -webkit-fill-available;
+  overflow-x: auto;
+
   background-color: var(--code-bg-color);
   color: var(--code-text-color);
   padding: 1em 2em;
